--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3667,29 +3667,29 @@ body .ui-tooltip {
   height: 16px;
 }
 
-.ui-icon, .ui-widget-content .ui-icon, .ui-widget-header .ui-icon {
-  background-image: url("../imgs/ui-icons/ui-icons_444444_256x240.png");
-}
+/* .ui-icon, .ui-widget-content .ui-icon, .ui-widget-header .ui-icon {
+  background-image: url("@/assets/imgs/ui-icons/ui-icons_444444_256x240.png");
+} 
 
 .ui-button:focus .ui-icon, .ui-button:hover .ui-icon, .ui-state-focus .ui-icon, .ui-state-hover .ui-icon {
-  background-image: url("../imgs/ui-icons/ui-icons_555555_256x240.png");
-}
+  background-image: url("@/assets/imgs/ui-icons/ui-icons_555555_256x240.png");
+} 
 
 .ui-button:active .ui-icon, .ui-state-active .ui-icon {
-  background-image: url("images/ui-icons_ffffff_256x240.png");
-}
+  background-image: url("@/assets/imgs/ui-icons_ffffff_256x240.png");
+} 
 
 .ui-button .ui-state-highlight.ui-icon, .ui-state-highlight .ui-icon {
-  background-image: url("images/ui-icons_777620_256x240.png");
+  background-image: url("@/assets/imgs/ui-icons_777620_256x240.png");
 }
 
 .ui-state-error .ui-icon, .ui-state-error-text .ui-icon {
-  background-image: url("images/ui-icons_cc0000_256x240.png");
+  background-image: url("@/assets/imgs/ui-icons_cc0000_256x240.png");
 }
 
 .ui-button .ui-icon {
-  background-image: url("images/ui-icons_777777_256x240.png");
-}
+  background-image: url("@/assets/imgs/ui-icons_777777_256x240.png");
+} */
 
 .ui-icon-blank {
   background-position: 16px 16px;
@@ -5399,8 +5399,6 @@ body .ui-tooltip {
   }
 }
 .cta__media img {
-  -webkit-mask-image: url(../../assets/imgs/cta/cta_shape.svg);
-          mask-image: url(../../assets/imgs/cta/cta_shape.svg);
   mask-mode: alpha;
   -webkit-mask-size: 670px;
           mask-size: 670px;
