Build Layout Components

--- a/public/assets/scss/layout/pages/_home-2.scss
+++ b/public/assets/scss/layout/pages/_home-2.scss
@@ -11,6 +11,6 @@
     top: -403px;
     width: 100%;
     height: 100%;
-    background-image: url("../imgs/home-2/background.svg");
+    /*background-image: url("../imgs/home-2/background.svg");*/
   }
 }
