--- a/public/assets/scss/layout/pages/_home-3.scss
+++ b/public/assets/scss/layout/pages/_home-3.scss
@@ -12,6 +12,6 @@
     z-index: -1;
     width: 100%;
     height: 100%;
-    background-image: url("../imgs/home-3/background.svg");
+    /*background-image: url("../imgs/home-3/background.svg");*/
   }
 }
