--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,139 +1,3 @@
-/*-----------------------------------------------------------------------------------
-/************ TABLE OF CONTENTS ***************
-
-	-----------------
-    01. THEME CSS
-	-----------------
-		1.1 @forward 'colors';
-		1.2 @forward 'mixins';
-		1.3 @forward 'extends';
-		1.4 @forward 'breakpoints';
-		1.5 @forward 'typography';
-		1.6 @forward 'root';
-		1 index
-
-	-----------------
-    02. COMPONENTS CSS
-	-----------------
-		2.1 @forward 'custom-class';
-		2.2 @forward 'background';
-		2.3 @forward 'buttons';
-		2.4 @forward 'offcanvas';
-		2.5 @forward 'section-title';
-		2.6 @forward 'breadcrumb';
-		2.7 @forward 'backtotop';
-		2.8 @forward 'animation';
-		2.9 @forward 'preloader';
-		2.10 @forward 'rangeSlider';
-		2.11 @forward 'search';
-		2 index
-
-	-----------------
-    03. HEADER CSS
-	-----------------
-		3.1 @forward 'header-common';
-		3.2 @forward 'header-1';
-		3.3 @forward 'header-2';
-		3.4 @forward 'header-3';
-		3.5 @forward 'header-4';
-		3 index
-
-    ---------------------------------
-	04. MENU CSS
-	---------------------------------
-		4.1 @forward 'menu';
-		4.2 @forward 'meanmenu';
-		4 index
-
-	---------------------------------
-	05. BLOG CSS
-	---------------------------------
-		5.1 @forward 'blog';
-		5.2 @forward 'sidebar';
-		5.3 @forward 'blog-details';
-		5.4 @forward 'blog-2';
-		5.5 @forward 'blog-3';
-		5.6 @forward 'blog-4';
-		5 index
-
-	---------------------------------
-	06. FOOTER CSS
-	---------------------------------
-		6.1 @forward 'footer';
-		6.2 @forward 'footer-copyright';
-		6.3 @forward 'footer-2';
-		6.4 @forward 'footer-3';
-		6.5 @forward 'footer-cta';
-		6 index
-
-	---------------------------------
-	07. CTA CSS
-	---------------------------------
-		7.1 @forward 'cta';
-		7.2 @forward 'cta-2';
-		7 index
-
-	---------------------------------
-	08. BRAND CSS
-	---------------------------------
-		8.1 @forward 'brand';
-		8 index
-
-	---------------------------------
-	09. Banner CSS
-	---------------------------------
-		9.1 @forward 'banner-1';
-		9.2 @forward 'banner-2';
-		9.3 @forward 'banner-3';
-		9 index
-
-	---------------------------------
-	10. PAGES CSS
-	---------------------------------
-		10.1 @forward './service';
-		10.2 @forward './treatment-process';
-		10.3 @forward './pricing';
-		10.4 @forward './team';
-		10.5 @forward './ask-question';
-		10.6 @forward './testimonial';
-		10.7 @forward './take-appointment';
-		10.8 @forward './about-us';
-		10.9 @forward './appointment-2';
-		10.10 @forward './filter';
-		10.11 @forward './service-2';
-		10.12 @forward './service-3';
-		10.13 @forward './experience';
-		10.14 @forward './pricing-action';
-		10.15 @forward './testimonial-2';
-		10.16 @forward './slider-text';
-		10.17 @forward './our-projects';
-		10.18 @forward './about-us-2';
-		10.19 @forward './service-4';
-		10.20 @forward './client-testimonial';
-		10.21 @forward './take-appointment-2';
-		10.22 @forward './doctor';
-		10.23 @forward './specialist-doctor';
-		10.24 @forward './experience-2';
-		10.25 @forward './latest-work';
-		10.26 @forward './home-2';
-		10.27 @forward './pricing-action-2';
-		10.28 @forward './about-us-3';
-		10.29 @forward './home-3';
-		10.30 @forward './why-choose-us';
-		10.31 @forward './wellness-expertise';
-		10.32 @forward './faq-page';
-		10.33 @forward './pricing-appointment';
-		10.34 @forward './contact';
-		10.35 @forward './404';
-		10.36 @forward './take-appointment-3';
-		10.37 @forward './pricing-action-3';
-		10.38 @forward './portfolio-details';
-		10.39 @forward './doctors-details';
-		10.40 @forward './service-details';
-		10 index
- */
-/*----------------------------------------*/
-/*  1.1 Theme Default
 /*----------------------------------------*/
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 .rr__faq-2 .accordion-button::after, .rr__faq .accordion-button::after {
@@ -1152,7 +1016,7 @@ a.rr-a-btn:hover {
 /*  2.4 offcanvas
 /*----------------------------------------*/
 .offcanvas__area {
-  background: #0E0A24 none repeat scroll 0 0;
+  background: #fff none repeat scroll 0 0;
   position: fixed;
   right: 0;
   top: 0;
@@ -1269,7 +1133,7 @@ a.rr-a-btn:hover {
   color: var(--rr-theme-primary);
 }
 .offcanvas__title {
-  color: var(--rr-common-white);
+  color: var(--rr-color-900);
 }
 @media (max-width:450px) {
   .offcanvas__title {
@@ -1312,7 +1176,7 @@ a.rr-a-btn:hover {
   transform: translateY(-3px);
 }
 .offcanvas__social p {
-  color: var(--rr-common-white);
+  color: var(--rr-color-900);
 }
 .offcanvas__notification-icon a {
   font-size: 14px;
@@ -4589,7 +4453,13 @@ body .ui-tooltip {
 }
 .header__logo {
   max-width: 144px;
+      
 }
+.header__logo img{
+      max-width: 200px;
+        margin: 20px;
+}
+
 .header__main {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -5545,7 +5415,7 @@ body .ui-tooltip {
   -webkit-margin-end: 0;
           margin-inline-end: 0;
 }
-.main-menu ul li.active > a {
+.main-menu ul li > a.active {
   color: var(--rr-theme-primary) !important;
 }
 .main-menu ul li > a {
@@ -6057,7 +5927,7 @@ body .ui-tooltip {
   text-transform: capitalize;
   width: 100%;
   padding: 10px 0;
-  color: var(--rr-common-white);
+  color: var(--rr-color-900);
   border-top: 1px solid rgba(255, 255, 255, 0.079);
   font-size: 16px;
   line-height: 1.5;
